--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,7 +2,7 @@
 
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/Dunes.Dunes
-GlobalDefaultGameMode=/Game/ThirdPerson/Blueprints/BP_ThirdPersonGameMode.BP_ThirdPersonGameMode_C
+GlobalDefaultGameMode=/Script/Engine.GameMode
 EditorStartupMap=/Game/Dunes.Dunes
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
